# r-sim

./: .gitignore  Cargo.toml  LICENSE  README.md  default_config.toml  requirements.sdoc  simulation_log.csv  test_plan.sdoc  test_simulation_log.csv
.github/workflows/: ci.yml
book/: book.toml
book/src/: SUMMARY.md  appendix-labs.md  appendix-reference.md  ch01-getting-started.md  ch02-fundamentals.md  ch03-tasks.md  ch04-dependencies.md  ch05-io.md  ch06-fmu.md  ch07-configuration.md  ch08-web.md  ch09-testing.md  ch10-advanced.md  introduction.md
book/src/appendix-labs/: lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md
book/src/ch01-getting-started/: first-simulation.md  installation.md
book/src/ch02-fundamentals/: determinism.md  rt-vs-nrt.md  time-steps.md  what-is-rts.md
book/src/ch03-tasks/: builtin-tasks.md  custom-tasks.md  simulation-task-trait.md  task-factory.md
book/src/ch04-dependencies/: causal-loops.md  data-flow.md  memory-blocks.md  topological-sort.md
book/src/ch05-io/: analog.md  extending-io.md  gpio.md  modbus.md  serial.md  udp.md
book/src/ch06-fmu/: building-fmu.md  co-simulation.md  fmi-standard.md  loading-fmus.md
book/src/ch07-configuration/: config-format.md  dependency-config.md  logging-config.md  scenarios.md  task-config.md
book/src/ch08-web/: lifecycle-control.md  monitoring.md  parameter-tuning.md
book/src/ch09-testing/: ci.md  (+2 more)
fmu_test/: Cargo.toml
fmu_test/src/: lib.rs
framework/: Cargo.toml
framework/src/: lib.rs
scenarios/: test_scenario.toml
src/: main.rs
tests/: integration_test.rs  run_tests.sh
tests/test_configs/: analog_test.toml  causal_loop_memory_block.toml  dependent_tasks.toml  gpio_test.toml  invalid_config.toml  logging_config.toml  modbus_tcp_test.toml  non_existent_fmu.toml  serial_test.toml  slow_sim.toml  synchronized_io.toml  two_independent_tasks.toml  udp_test.toml
(+5 files in other folders)
