[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
csv = "1.3"
warp = "0.3"
thiserror = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
